# observer

./: pyproject.toml
observer/: __init__.py  azclients.py  notify.py  tools.py
observer/ioc/: __init__.py  fs.py  scraper.py
requirements/: requirements-dev.txt  requirements.txt
tests/: cli_test.py  ioc_test.py  tools_test.py
